tests/src/frontend/typechecking/invalid/memoized_untracked.sk
memoized untracked fun no(): void {
  void
}
